@@ -6,6 +6,9 @@ Changes in version 0.88
 - Added patch from Marcelo Augusto <maugusto@stetnet.com.br> to allow
   for limits on the maximum number of recipients per message.
 
+- Defer looking up $MAXHOPS and $HEADER_ADD so that they can be set in
+  the mailrules.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
